Learning to create classes

--- a/content/course/2.python/2.python_advanced/01.OOP/1.introduction.ipynb
+++ b/content/course/2.python/2.python_advanced/01.OOP/1.introduction.ipynb
@@ -65,9 +65,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "140718237738056 140718237738056\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "x = 10  # Creating the int() instance\n",
     "y = 10\n",
@@ -87,14 +96,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "140718237738088 140718237738056\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "x += 1\n",
     "print(id(x), id(y))\n",
     "print(x is y)  # comparing the types"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "attachments": {},
@@ -106,9 +131,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2386429578624 2386429578624\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "person = [\"James\", \"Bond\", \"007\", \"Secret agent\"]\n",
     "person_copy = person\n",
@@ -128,9 +162,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2386429578624 2386429578624\n",
+      "['James', 'Bond', '007', 'Secret agent', 'English', 'Man'] ['James', 'Bond', '007', 'Secret agent', 'English', 'Man']\n"
+     ]
+    }
+   ],
    "source": [
     "person += [\"English\"]\n",
     "person_copy += [\"Man\"]\n",
@@ -164,9 +207,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, and welcome to my world.\n"
+     ]
+    }
+   ],
    "source": [
     "text = \"hello, and welcome to my world.\"\n",
     "capitalize_text = text.capitalize()\n",
@@ -247,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,9 +344,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "__main__.Car"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# A car object\n",
     "type(bombo)"
@@ -303,9 +365,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Ferrari'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# We can access the name attribute of our object\n",
     "bombo.name"
@@ -313,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,9 +396,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'250'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "bombo.model"
    ]
@@ -351,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,9 +456,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.Person object at 0x0000022BA252FE90>\n"
+     ]
+    }
+   ],
    "source": [
     "coach = Person(\"Ludovic\", \"Patho\")\n",
     "print(coach)"
@@ -398,9 +490,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Ludovic', 'Patho', 34, 'Brussels')"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "(coach.firstname, coach.lastname, coach.age, coach.place_residence)"
    ]
@@ -419,7 +522,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# birthday\n",
+    "def __init__(self, firstname, lastname, birthday):\n",
+    "        \"\"\"Constructor our class\"\"\"\n",
+    "        self.firstname = firstname\n",
+    "        self.lastname = lastname\n",
+    "        self.bir\n"
    ]
   },
   {
@@ -820,7 +928,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.5"
   },
   "vscode": {
    "interpreter": {
